objects/Account.object
<CustomObject>
    <fields>
        <fullName>Has_Ultimate_Parent_Acc_an_Account_Plan__c</fullName>
        <description>technical field needed for reports</description>
        <formula>if( UltiParentAcc__c=&quot;&quot; , HasActiveAccountPlan__c , UltiParentAcc__r.HasActiveAccountPlan__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Ultimate Parent Acc Active Acc Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Has_Ultimate_Parent_Acc_an_Account_Plans__c</fullName>
        <description>November2012</description>
        <formula>if( UltiParentAcc__c=&quot;&quot; , HasAccountPlan__c , UltiParentAcc__r.HasAccountPlan__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Ultimate Parent Acc an Account Plans</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HierarchyCode__c</fullName>
        <label>Hierarchy Code</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HighValueCapable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is for BR-7030. New attribute created to help Salespersons manage their relationship with Electricians.</description>
        <inlineHelpText>High-Value Capable Accounts are digitally mature businesses with advanced selling behavior that make them valuable partners in up-selling, cross-selling, and promoting Schneider Electric products.</inlineHelpText>
        <label>High-Value Capable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Home__c</fullName>
        <label>Home</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EH001</fullName>
                </value>
                <value>
                    <fullName>EH002</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IDMS_Account_UserExternalId__c</fullName>
        <externalId>true</externalId>
        <label>IDMS_Account_UserExternalId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITRoomManagementDomain__c</fullName>
        <description>Dec 2012 Rel: Mkt communication content preferences added</description>
        <label>Data Center &amp; Network</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IT00E</fullName>
                </value>
                <value>
                    <fullName>IT00F</fullName>
                </value>
                <value>
                    <fullName>IT00G</fullName>
                </value>
                <value>
                    <fullName>IT00H</fullName>
                </value>
                <value>
                    <fullName>IT00B</fullName>
                </value>
                <value>
                    <fullName>IT00D</fullName>
                </value>
                <value>
                    <fullName>IT00A</fullName>
                </value>
                <value>
                    <fullName>IT00C</fullName>
                </value>
                <value>
                    <fullName>IT00M</fullName>
                </value>
                <value>
                    <fullName>IT00J</fullName>
                </value>
                <value>
                    <fullName>IT00K</fullName>
                </value>
                <value>
                    <fullName>IT00L</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IVRMenu__c</fullName>
        <description>Dedicated IVR menus are available as per customer classification or business unit</description>
        <label>IVR Menu</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CallFlowOption__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>IVR_Contractors</fullName>
                </value>
                <value>
                    <fullName>IVR_Panelbuilders</fullName>
                </value>
                <value>
                    <fullName>IVR_OEMs</fullName>
                </value>
                <value>
                    <fullName>IVR_Specifiers</fullName>
                </value>
                <value>
                    <fullName>IVR_SystemIntegrators</fullName>
                </value>
                <value>
                    <fullName>IVR_WholeSalers</fullName>
                </value>
                <value>
                    <fullName>IVR_Building</fullName>
                </value>
                <value>
                    <fullName>IVR_Energy</fullName>
                </value>
                <value>
                    <fullName>IVR_Industry</fullName>
                </value>
                <value>
                    <fullName>IVR_IT</fullName>
                </value>
                <value>
                    <fullName>IVR_Retails</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InactiveReason__c</fullName>
        <label>Inactive Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Inactive__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Company Closed</fullName>
                </value>
                <value>
                    <fullName>Operations Suspended</fullName>
                </value>
                <value>
                    <fullName>Relationship Terminated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InactiveWarning__c</fullName>
        <formula>IF (Inactive__c , IMAGE(&quot;/resource/STR_JUN15_ACC_InactiveFlag&quot;,&quot;&quot; ,70,140), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inactive Warning</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is created to facilitate a way for processes to exclude Accounts from searches, reports, and transactions without forcing deletion of the record.</description>
        <inlineHelpText>An active business relationship with the Account no longer exists; however, history of prior business transactions should be retained.</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsMasterSalesAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Master Account?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPRMAccount__c</fullName>
        <formula>IF(
OR( AND(PRMAccount__c, RecordType.DeveloperName = &apos;Customer&apos;), RecordType.DeveloperName = &apos;PRMAccount&apos;),
IMAGE(&quot;/img/permissions_confirm16.gif&quot;, &quot;OK&quot;, 16,16),
IMAGE(&quot;/img/permissions_deny16.gif&quot;, &quot;KO&quot;, 16,16)
)</formula>
        <label>PRM Account Only</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company/Account</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadingBusiness__c</fullName>
        <description>SR0 - Picklist to Indicate the main business the account is related to</description>
        <inlineHelpText>Primary Schneider Electric business unit responsible for this account.</inlineHelpText>
        <label>Leading Business (BU)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BD</fullName>
                    <color>#F3D904</color>
                    <label>BD</label>
                </value>
                <value>
                    <fullName>BI</fullName>
                    <color>#33CCFF</color>
                    <label>BI</label>
                </value>
                <value>
                    <fullName>BU</fullName>
                    <isActive>false</isActive>
                    <label>BU</label>
                </value>
                <value>
                    <fullName>Buildings</fullName>
                    <isActive>false</isActive>
                    <label>Buildings</label>
                </value>
                <value>
                    <fullName>EcoBuildings</fullName>
                    <isActive>false</isActive>
                    <label>EcoBuildings</label>
                </value>
                <value>
                    <fullName>EN</fullName>
                    <color>#CC0000</color>
                    <label>EN</label>
                </value>
                <value>
                    <fullName>ENERGY</fullName>
                    <isActive>false</isActive>
                    <label>ENERGY</label>
                </value>
                <value>
                    <fullName>ETF</fullName>
                    <isActive>false</isActive>
                    <label>ETF</label>
                </value>
                <value>
                    <fullName>FIN</fullName>
                    <isActive>false</isActive>
                    <label>FIN</label>
                </value>
                <value>
                    <fullName>FLS</fullName>
                    <isActive>false</isActive>
                    <label>FLS</label>
                </value>
                <value>
                    <fullName>GC</fullName>
                    <isActive>false</isActive>
                    <label>GC</label>
                </value>
                <value>
                    <fullName>GOP</fullName>
                    <isActive>false</isActive>
                    <label>GOP</label>
                </value>
                <value>
                    <fullName>GS</fullName>
                    <isActive>false</isActive>
                    <label>GS</label>
                </value>
                <value>
                    <fullName>GW</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>IB</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                    <color>#78C953</color>
                    <label>ID</label>
                </value>
                <value>
                    <fullName>IN</fullName>
                    <isActive>false</isActive>
                    <label>IN</label>
                </value>
                <value>
                    <fullName>Industry</fullName>
                    <isActive>false</isActive>
                    <label>Industry</label>
                </value>
                <value>
                    <fullName>IPO</fullName>
                    <isActive>false</isActive>
                    <label>IPO</label>
                </value>
                <value>
                    <fullName>IT</fullName>
                    <color>#FF9900</color>
                    <label>IT</label>
                </value>
                <value>
                    <fullName>ITD</fullName>
                    <isActive>false</isActive>
                    <label>ITD</label>
                </value>
                <value>
                    <fullName>--None--</fullName>
                    <isActive>false</isActive>
                    <label>--None--</label>
                </value>
                <value>
                    <fullName>PA</fullName>
                    <isActive>false</isActive>
                    <label>PA</label>
                </value>
                <value>
                    <fullName>Partner</fullName>
                    <isActive>false</isActive>
                    <label>Partner</label>
                </value>
                <value>
                    <fullName>Partner Projects</fullName>
                    <isActive>false</isActive>
                    <label>Partner Projects</label>
                </value>
                <value>
                    <fullName>PE</fullName>
                    <isActive>false</isActive>
                    <label>PE</label>
                </value>
                <value>
                    <fullName>Power</fullName>
                    <isActive>false</isActive>
                    <label>Power</label>
                </value>
                <value>
                    <fullName>PP</fullName>
                </value>
                <value>
                    <fullName>PR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LinkedCommodity__c</fullName>
        <description>Advanced I2P - Supplier Linked Commodity</description>
        <label>Linked Commodity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocalAdditionalAddress__c</fullName>
        <description>October Release 2011</description>
        <inlineHelpText>Further local precision for the address like Building, Floor etc.</inlineHelpText>
        <label>Additional Information (Local Language)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocalCity__c</fullName>
        <description>SR0 - Field to store city in local language</description>
        <inlineHelpText>Limited to non-Latin character languages only.</inlineHelpText>
        <label>Local City</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocalCountry__c</fullName>
        <description>BFOAC-320 - R&amp;R team request to have more field on Local address on the Account page layout to enter the &quot;Local sate/Province&quot; and the Local country.</description>
        <label>Local Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocalCounty__c</fullName>
        <description>SR0 - Custom to store County information in local language</description>
        <inlineHelpText>Limited to non-Latin character languages only.</inlineHelpText>
        <label>Local County</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocalFieldServiceSPOC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Field Service resource supporting iServices issues internally. Serves as internal escalation contact within a single country, coordinating activities on technical issues, including escalation/resolution. Coordinates network of FSRs serving priority sites.</inlineHelpText>
        <label>Local Field Service SPOC</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>LocalFieldServiceSPOC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LocalState__c</fullName>
        <description>BFOAC-320 - R&amp;R team request to have more field on Local address on the Account page layout to enter the &quot;Local sate/Province&quot; and the Local country.</description>
        <label>Local State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MarketSegment__c</fullName>
        <description>SR0 - Picklist to store account main market segment</description>
        <inlineHelpText>Market Segment is a global classification used to describe the primary industry an account does business in (not the industries they serve).</inlineHelpText>
        <label>Market Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>191</fullName>
                    <isActive>false</isActive>
                    <label>191</label>
                </value>
                <value>
                    <fullName>ABCD</fullName>
                    <isActive>false</isActive>
                    <label>ABCD</label>
                </value>
                <value>
                    <fullName>Agriculture, Food &amp; Beverage</fullName>
                    <isActive>false</isActive>
                    <label>Agriculture, Food &amp; Beverage</label>
                </value>
                <value>
                    <fullName>Automative</fullName>
                    <isActive>false</isActive>
                    <label>Automative</label>
                </value>
                <value>
                    <fullName>B1</fullName>
                    <isActive>false</isActive>
                    <label>B1</label>
                </value>
                <value>
                    <fullName>B12</fullName>
                    <isActive>false</isActive>
                    <label>B12</label>
                </value>
                <value>
                    <fullName>B14</fullName>
                    <isActive>false</isActive>
                    <label>B14</label>
                </value>
                <value>
                    <fullName>B15</fullName>
                    <isActive>false</isActive>
                    <label>B15</label>
                </value>
                <value>
                    <fullName>B16</fullName>
                    <isActive>false</isActive>
                    <label>B16</label>
                </value>
                <value>
                    <fullName>B41</fullName>
                    <isActive>false</isActive>
                    <label>B41</label>
                </value>
                <value>
                    <fullName>B43</fullName>
                    <isActive>false</isActive>
                    <label>B43</label>
                </value>
                <value>
                    <fullName>B44</fullName>
                    <isActive>false</isActive>
                    <label>B44</label>
                </value>
                <value>
                    <fullName>B45</fullName>
                    <isActive>false</isActive>
                    <label>B45</label>
                </value>
                <value>
                    <fullName>B47</fullName>
                    <isActive>false</isActive>
                    <label>B47</label>
                </value>
                <value>
                    <fullName>B48</fullName>
                    <isActive>false</isActive>
                    <label>B48</label>
                </value>
                <value>
                    <fullName>B51</fullName>
                    <isActive>false</isActive>
                    <label>B51</label>
                </value>
                <value>
                    <fullName>B52</fullName>
                    <isActive>false</isActive>
                    <label>B52</label>
                </value>
                <value>
                    <fullName>B53</fullName>
                    <isActive>false</isActive>
                    <label>B53</label>
                </value>
                <value>
                    <fullName>B57</fullName>
                    <isActive>false</isActive>
                    <label>B57</label>
                </value>
                <value>
                    <fullName>B70</fullName>
                    <isActive>false</isActive>
                    <label>B70</label>
                </value>
                <value>
                    <fullName>B90</fullName>
                    <isActive>false</isActive>
                    <label>B90</label>
                </value>
                <value>
                    <fullName>B91</fullName>
                    <isActive>false</isActive>
                    <label>B91</label>
                </value>
                <value>
                    <fullName>B92</fullName>
                    <isActive>false</isActive>
                    <label>B92</label>
                </value>
                <value>
                    <fullName>B93</fullName>
                    <isActive>false</isActive>
                    <label>B93</label>
                </value>
                <value>
                    <fullName>B94</fullName>
                    <isActive>false</isActive>
                    <label>B94</label>
                </value>
                <value>
                    <fullName>B95</fullName>
                    <isActive>false</isActive>
                    <label>B95</label>
                </value>
                <value>
                    <fullName>BA0</fullName>
                    <isActive>false</isActive>
                    <label>BA0</label>
                </value>
                <value>
                    <fullName>BA1</fullName>
                    <isActive>false</isActive>
                    <label>BA1</label>
                </value>
                <value>
                    <fullName>BA2</fullName>
                    <isActive>false</isActive>
                    <label>BA2</label>
                </value>
                <value>
                    <fullName>BA3</fullName>
                    <isActive>false</isActive>
                    <label>BA3</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MarketServed__c</fullName>
        <inlineHelpText>Markets Served describes the industries an Account provides its goods and services to. It differs from Market Segment, which describes the industry in which the Account itself is part of.</inlineHelpText>
        <label>Markets Served</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BA4</fullName>
                </value>
                <value>
                    <fullName>BA5</fullName>
                </value>
                <value>
                    <fullName>BD1</fullName>
                </value>
                <value>
                    <fullName>BD3</fullName>
                </value>
                <value>
                    <fullName>BD4</fullName>
                </value>
                <value>
                    <fullName>BD6</fullName>
                </value>
                <value>
                    <fullName>BD9</fullName>
                </value>
                <value>
                    <fullName>BDR</fullName>
                </value>
                <value>
                    <fullName>BDZ</fullName>
                </value>
                <value>
                    <fullName>EN1</fullName>
                </value>
                <value>
                    <fullName>EN2</fullName>
                </value>
                <value>
                    <fullName>EN3</fullName>
                </value>
                <value>
                    <fullName>ID1</fullName>
                </value>
                <value>
                    <fullName>ID2</fullName>
                </value>
                <value>
                    <fullName>ID3</fullName>
                </value>
                <value>
                    <fullName>ID4</fullName>
                </value>
                <value>
                    <fullName>ID5</fullName>
                </value>
                <value>
                    <fullName>ID6</fullName>
                </value>
                <value>
                    <fullName>IDZ</fullName>
                </value>
                <value>
                    <fullName>IT1</fullName>
                </value>
                <value>
                    <fullName>IT2</fullName>
                </value>
                <value>
                    <fullName>IT3</fullName>
                </value>
                <value>
                    <fullName>PW1</fullName>
                </value>
                <value>
                    <fullName>PW3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MarketSubSegment__c</fullName>
        <description>SR0 - This picklist depends on Market Segment</description>
        <label>Market Sub-Segment</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>MarketSegment__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>-</fullName>
                    <isActive>false</isActive>
                    <label>-</label>
                </value>
                <value>
                    <fullName>__</fullName>
                    <isActive>false</isActive>
                    <label>__</label>
                </value>
                <value>
                    <fullName>&apos;&apos;.BD7</fullName>
                    <isActive>false</isActive>
                    <label>&apos;&apos;.BD7</label>
                </value>
                <value>
                    <fullName>&apos;&apos;.BD8</fullName>
                    <isActive>false</isActive>
                    <label>&apos;&apos;.BD8</label>
                </value>
                <value>
                    <fullName>&apos;&apos;.BD9</fullName>
                    <isActive>false</isActive>
                    <label>&apos;&apos;.BD9</label>
                </value>
                <value>
                    <fullName>&apos;&apos;.EN2</fullName>
                    <isActive>false</isActive>
                    <label>&apos;&apos;.EN2</label>
                </value>
                <value>
                    <fullName>&apos;&apos;.EN3</fullName>
                    <isActive>false</isActive>
                    <label>&apos;&apos;.EN3</label>
                </value>
                <value>
                    <fullName>&apos;&apos;.ID3</fullName>
                    <isActive>false</isActive>
                    <label>&apos;&apos;.ID3</label>
                </value>
                <value>
                    <fullName>&apos;&apos;.ID4</fullName>
                    <isActive>false</isActive>
                    <label>&apos;&apos;.ID4</label>
                </value>
                <value>
                    <fullName>&apos;&apos;.IT1</fullName>
                    <isActive>false</isActive>
                    <label>&apos;&apos;.IT1</label>
                </value>
                <value>
                    <fullName>&apos;&apos;.IT2</fullName>
                    <isActive>false</isActive>
                    <label>&apos;&apos;.IT2</label>
                </value>
                <value>
                    <fullName>&apos;&apos;.IT3</fullName>
                    <isActive>false</isActive>
                    <label>&apos;&apos;.IT3</label>
                </value>
                <value>
                    <fullName>13B</fullName>
                    <isActive>false</isActive>
                    <label>13B</label>
                </value>
                <value>
                    <fullName>19X</fullName>
                    <isActive>false</isActive>
                    <label>19X</label>
                </value>
                <value>
                    <fullName>B11</fullName>
                    <isActive>false</isActive>
                    <label>B11</label>
                </value>
                <value>
                    <fullName>B12</fullName>
                    <isActive>false</isActive>
                    <label>B12</label>
                </value>
                <value>
                    <fullName>B13</fullName>
                    <isActive>false</isActive>
                    <label>B13</label>
                </value>
                <value>
                    <fullName>B14</fullName>
                    <isActive>false</isActive>
                    <label>B14</label>
                </value>
                <value>
                    <fullName>B15</fullName>
                </value>
                <value>
                    <fullName>B16</fullName>
                </value>
                <value>
                    <fullName>B17</fullName>
                </value>
                <value>
                    <fullName>B18</fullName>
                </value>
                <value>
                    <fullName>B19</fullName>
                </value>
                <value>
                    <fullName>B20</fullName>
                </value>
                <value>
                    <fullName>B21</fullName>
                    <isActive>false</isActive>
                    <label>B21</label>
                </value>
                <value>
                    <fullName>B22</fullName>
                    <isActive>false</isActive>
                    <label>B22</label>
                </value>
                <value>
                    <fullName>B23</fullName>
                    <isActive>false</isActive>
                    <label>B23</label>
                </value>
                <value>
                    <fullName>B24</fullName>
                    <isActive>false</isActive>
                    <label>B24</label>
                </value>
                <value>
                    <fullName>B25</fullName>
                    <isActive>false</isActive>
                    <label>B25</label>
                </value>
                <value>
                    <fullName>B31</fullName>
                    <isActive>false</isActive>
                    <label>B31</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MySERemoteAdminName__c</fullName>
        <description>Q2 2016 Release : MySE Project :This field will store the names of all Remote admins per BU for a Account. The format of this field - {MySEBU1:RA1, MySEBU2:RA2,...MySEBUn:RAn}. It&apos;s a Concatenated List of MySE BU&apos;s and Remote Admin Names. The master for this field will be â€˜Cordys/MySE&apos;.</description>
        <label>MySE BU Remote Admin Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NAMPartnerOpptyWizard__c</fullName>
        <formula>HYPERLINK(&quot;/apex/VFP_NAMOpportunityWizard?accID=&quot;&amp;Id,&quot;NAM Opportunity Wizard&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&lt;NAM Opportunity Wizard&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NbrofAccountPlans__c</fullName>
        <description>November2012- Technical field needed for reports</description>
        <label>Nbr of Account Plans</label>
        <summaryForeignKey>SFE_AccPlan__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NbrofActiveAccountPlans__c</fullName>
        <description>technical field needed for reports</description>
        <label>Nbr of Active Account Plans</label>
        <summaryFilterItems>
            <field>SFE_AccPlan__c.Status__c</field>
            <operation>equals</operation>
            <value>Validated by management, Reviewed with the customer</value>
        </summaryFilterItems>
        <summaryForeignKey>SFE_AccPlan__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NbrofPlatformingScoring__c</fullName>
        <description>Technical field needed for report</description>
        <label>Nbr of Platforming Scoring</label>
        <summaryFilterItems>
            <field>SFE_PlatformingScoring__c.Score__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>SFE_PlatformingScoring__c.PlatformedAccount__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OCROMCustomerCode__c</fullName>
        <inlineHelpText>This is an Optical Character recognition (OCR) defined to dispatch the incoming emails directly to an OCR application</inlineHelpText>
        <label>OCR OM Customer Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OCR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OperationsEnterpriseManagement__c</fullName>
        <label>Operations &amp; Enterprise Management</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OE001</fullName>
                </value>
                <value>
                    <fullName>OE002</fullName>
                </value>
                <value>
                    <fullName>OE003</fullName>
                </value>
                <value>
                    <fullName>OE004</fullName>
                </value>
                <value>
                    <fullName>OE005</fullName>
                </value>
                <value>
                    <fullName>OE006</fullName>
                </value>
                <value>
                    <fullName>OE007</fullName>
                </value>
                <value>
                    <fullName>OE008</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PBAAgent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ACC - Account Preferred Agent Back Up</description>
        <label>Preferred Agent Back Up</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PITCHER__Billing_Lat_Lon__c</fullName>
        <formula>TEXT(BillingLatitude) &amp; &quot; , &quot; &amp; TEXT(BillingLongitude) &amp; &quot; &quot; &amp; 
  HYPERLINK(&quot;apex/PITCHER__AccountGeolocation?id=&quot;&amp;Id&amp;&quot;&amp;retURL=%2f&quot; &amp; Id ,&quot;(Change)&quot;, &quot;_self&quot;)</formula>
        <label>Billing Lat/Lon</label>
        <type>Text</type>
    </fields>
</CustomObject>